--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,10 @@
 vignettes/*.html
 vignettes/*.pdf
 
+# knitted markdowns
+R/*.html
+R/*.pdf
+
 # OAuth2 token, see https://github.com/hadley/httr/releases/tag/v0.3
 .httr-oauth
 
